# api/controller/profile.go
@@ -7,10 +7,23 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// ProfileController ...
 type ProfileController struct {
 	ProfileUsecase domain.ProfileUsecase
 }
 
+// @BasePath /api
+
+// Fetch ...
+// @Summary Fetch profile
+// @Description Fetch profile
+// @Tags User
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {object} domain.User
+// @Failure 500 {object} domain.ErrorResponse
+// @Router /user/me [get]
 func (pc *ProfileController) Fetch(c *gin.Context) {
 	userID := c.GetString("x-user-id")
 
@@ -23,6 +36,20 @@ func (pc *ProfileController) Fetch(c *gin.Context) {
 	c.JSON(http.StatusOK, profile)
 }
 
+// @BasePath /api
+
+// Update ...
+// @Summary Update profile
+// @Description Update profile
+// @Tags User
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param profile body object true "Profile"
+// @Success 200 {object} domain.SuccessResponse
+// @Failure 400 {object} domain.ErrorResponse
+// @Failure 500 {object} domain.ErrorResponse
+// @Router /user/me [patch]
 func (pc *ProfileController) Update(c *gin.Context) {
 	userID := c.GetString("x-user-id")
 
